<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FuncGeneralesCortHum4" Id="{497e5837-1248-4be6-b299-ef2f796ca598}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FuncGeneralesCortHum4
VAR_INPUT
IndexListFormatoTabla:INT;
END_VAR
VAR_OUTPUT
	//Modelo dividido en strings para DataBase
	s_ModeloActualTabla:STRING;
	s_FormatoActualTabla:STRING;
	s_EspesorActualTabla:STRING;
	s_ModeloEleccionTabla:STRING;
	s_FormatoEleccionTabla:STRING;
	s_EspesorEleccionTabla:STRING;
	//Comunes
	s_JustificaParoComun:STRING;
	s_FechaInicModeloTab:STRING;
END_VAR
VAR
	Reset_Fin_Prod:BOOL;
	P_FinProduccion:BOOL;
	P_EscribirModelo:BOOL;
	pul_Justif_Paro:BOOL;
	EscribeHistoricTablas:BOOL;
	FlancFiltUpFtcEscHistTab:R_TRIG;
	Cont1:INT;
	Cont2:INT;
	Cont3:INT;
	Cont4:INT;
END_VAR
VAR PERSISTENT 
	PointerHistTablas:INT;
END_VAR
	]]></Declaration>
    <Implementation>
      <ST><![CDATA[//                             >>>>>>>>>>>>>>>> Modelo de la tabla <<<<<<<<<<<<<<<<<

//Fin de producción 		
IF P_FinProduccion THEN 
Fin_Produccion();
END_IF;
IF P_EscribirModelo THEN
	ListFormatoTabla(); 
	Inicio_Nuevo_Modelo();
	
END_IF


//Envío de la linea de la tabla para el historico de control producción en el HMI del operario
 IF FlancFiltUpFtcEscHistTab.Q THEN 
	 EscStrHistoricoTablas();
 END_IF


Direccionamiento_variables_com();
FlancFiltUpFtcEscHistTab(CLK := FuncParoNodoCorteH4Remote1.Funci_CortHum4.tFiltro_up_Ftc.Q);]]></ST>
    </Implementation>
    <Action Name="Direccionamiento_variables_com" Id="{4cb71bcf-b2bc-47a4-9856-c8a61ddd8fd6}">
      <Implementation>
        <ST><![CDATA[	//                           	>>>>>>>>>>>>>>>>>>>>>>>>>>>>      STRING      <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
    Var_Com_CH4_MulDis.aStringCom[80] := s_ModeloActualTabla;
	Var_Com_CH4_MulDis.aStringCom[81] := s_FormatoActualTabla;
	Var_Com_CH4_MulDis.aStringCom[82] := s_EspesorActualTabla;
	Var_Com_CH4_MulDis.aStringCom[83] := s_FechaInicModeloTab;
	
	
	]]></ST>
      </Implementation>
    </Action>
    <Method Name="EscStrHistoricoTablas" Id="{44a0a646-a389-4ca9-8120-7eb4def922af}">
      <Declaration><![CDATA[METHOD EscStrHistoricoTablas : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Recorre todas las lineas de la tabla una posición y añade la nueva tabla en la linea 0 para mayor coodidad al visulizar

FOR PointerHistTablas := 100 TO 1 BY -1 DO 
	RegistroLocalDataBase.aHistoricStrTablasCH4[PointerHistTablas].ID := RegistroLocalDataBase.aHistoricStrTablasCH4[PointerHistTablas-1].ID;
	RegistroLocalDataBase.aHistoricStrTablasCH4[PointerHistTablas].Fecha := RegistroLocalDataBase.aHistoricStrTablasCH4[PointerHistTablas-1].Fecha;
	RegistroLocalDataBase.aHistoricStrTablasCH4[PointerHistTablas].Modelo := RegistroLocalDataBase.aHistoricStrTablasCH4[PointerHistTablas-1].Modelo;
	RegistroLocalDataBase.aHistoricStrTablasCH4[PointerHistTablas].Formato := RegistroLocalDataBase.aHistoricStrTablasCH4[PointerHistTablas-1].Formato;
	RegistroLocalDataBase.aHistoricStrTablasCH4[PointerHistTablas].Espesor :=RegistroLocalDataBase.aHistoricStrTablasCH4[PointerHistTablas-1].Espesor;
	RegistroLocalDataBase.aHistoricStrTablasCH4[PointerHistTablas].Maquina := RegistroLocalDataBase.aHistoricStrTablasCH4[PointerHistTablas-1].Maquina;
	RegistroLocalDataBase.aHistoricStrTablasCH4[PointerHistTablas].Cont_Piezas := RegistroLocalDataBase.aHistoricStrTablasCH4[PointerHistTablas-1].Cont_Piezas;
	RegistroLocalDataBase.aHistoricStrTablasCH4[PointerHistTablas].t_Entre_Piez_Ftc := RegistroLocalDataBase.aHistoricStrTablasCH4[PointerHistTablas-1].t_Entre_Piez_Ftc;
	RegistroLocalDataBase.aHistoricStrTablasCH4[PointerHistTablas].S_Justi_Paro_Ftc := RegistroLocalDataBase.aHistoricStrTablasCH4[PointerHistTablas-1].S_Justi_Paro_Ftc;
	
END_FOR
//Estructura de la array de la tabla para visualizar el historico de la tablas pasadas
RegistroLocalDataBase.aHistoricStrTablasCH4[0].ID := PointerHistTablas;
RegistroLocalDataBase.aHistoricStrTablasCH4[0].Fecha := Fecha_PLC.StringDateHourMin;
RegistroLocalDataBase.aHistoricStrTablasCH4[0].Modelo := FuncParoNodoCorteH4Remote1.sModeloActualTabla;
RegistroLocalDataBase.aHistoricStrTablasCH4[0].Formato := FuncParoNodoCorteH4Remote1.sFormatoActualTabla;
RegistroLocalDataBase.aHistoricStrTablasCH4[0].Espesor :=FuncParoNodoCorteH4Remote1.sEspesorActualTabla;
RegistroLocalDataBase.aHistoricStrTablasCH4[0].Maquina := 'Corte húmedo 4';
RegistroLocalDataBase.aHistoricStrTablasCH4[0].Cont_Piezas := FuncParoNodoCorteH4Remote1.Funci_CortHum4.Cont_Piezas_Ftc;
RegistroLocalDataBase.aHistoricStrTablasCH4[0].t_Entre_Piez_Ftc := FuncParoNodoCorteH4Remote1.Funci_CortHum4.t_Entre_Piez_Ftc;
RegistroLocalDataBase.aHistoricStrTablasCH4[0].S_Justi_Paro_Ftc := FuncParoNodoCorteH4Remote1.Funci_CortHum4.S_Justi_Paro_Ftc;





]]></ST>
      </Implementation>
    </Method>
    <Method Name="Fin_Produccion" Id="{9cb73819-1a22-40e9-a2d8-887e90cd0ccd}">
      <Declaration><![CDATA[METHOD Fin_Produccion : BOOL
VAR_INPUT	
END_VAR
var
	Puls_Fin_Produccion:BOOL;	
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Valores por defecto del modelo y fecha de inicio modelo

s_ModeloActualTabla:= 'Sin modelo de pieza';
s_ModeloEleccionTabla:= 'Sin modelo de pieza';
s_FormatoActualTabla:= 'Sin modelo de pieza';
s_FormatoEleccionTabla:= 'Sin modelo de pieza';
s_EspesorActualTabla:= 'Sin modelo de pieza';
s_EspesorEleccionTabla:= 'Sin modelo de pieza';
s_FechaInicModeloTab:= 'Sin modelo de pieza';
 
//Reset contador de piezas 
FuncParoNodoCorteH4Remote1.Funci_CortHum4.Fin_Produccion();]]></ST>
      </Implementation>
    </Method>
    <Method Name="Inicio_Nuevo_Modelo" Id="{71048897-297a-4d08-9c81-7534270db74f}">
      <Declaration><![CDATA[METHOD Inicio_Nuevo_Modelo : BOOL
VAR_INPUT
END_VAR
VAR
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
// Envías la fecha de inicio modelo de tabla 
s_FechaInicModeloTab:=Fecha_PLC.Mes_Dia_Hora_Min_Real;

//Envías el modelo de la tabla de la variable preelección  
s_ModeloActualTabla:=s_ModeloEleccionTabla;
s_FormatoActualTabla:=s_FormatoEleccionTabla;
s_EspesorActualTabla:= s_EspesorEleccionTabla;


]]></ST>
      </Implementation>
    </Method>
    <Method Name="ListFormatoTabla" Id="{ad82df9c-8c85-4830-8ee3-7fc3df4fd5f5}">
      <Declaration><![CDATA[METHOD ListFormatoTabla : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Función para poder realizar el desplegable de formato de la tabla en el Visu
IF IndexListFormatoTabla <> 6 THEN 
	IF IndexListFormatoTabla = 1 THEN 
		s_FormatoEleccionTabla:='17x17';
		Cont1:=Cont1+1;
	END_IF
	IF IndexListFormatoTabla = 2 THEN 
		s_FormatoEleccionTabla:='20x65';
		Cont2:=Cont2+1;
	END_IF
	IF IndexListFormatoTabla = 3 THEN 
		s_FormatoEleccionTabla:='30x15';
	END_IF
	IF IndexListFormatoTabla = 4 THEN 
		s_FormatoEleccionTabla:='30x30';
	END_IF
	IF IndexListFormatoTabla = 5 THEN 
		s_FormatoEleccionTabla:='03x03';
	END_IF

END_IF
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FuncGeneralesCortHum4">
      <LineId Id="25" Count="6" />
      <LineId Id="102" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="101" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="136" Count="5" />
      <LineId Id="133" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="71" Count="0" />
    </LineIds>
    <LineIds Name="FuncGeneralesCortHum4.Direccionamiento_variables_com">
      <LineId Id="2" Count="0" />
      <LineId Id="1" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="12" Count="1" />
      <LineId Id="9" Count="0" />
      <LineId Id="6" Count="1" />
    </LineIds>
    <LineIds Name="FuncGeneralesCortHum4.EscStrHistoricoTablas">
      <LineId Id="54" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="55" Count="8" />
      <LineId Id="66" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="36" Count="9" />
      <LineId Id="35" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="17" Count="1" />
      <LineId Id="10" Count="0" />
    </LineIds>
    <LineIds Name="FuncGeneralesCortHum4.Fin_Produccion">
      <LineId Id="49" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="68" Count="1" />
      <LineId Id="67" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="71" Count="1" />
    </LineIds>
    <LineIds Name="FuncGeneralesCortHum4.Inicio_Nuevo_Modelo">
      <LineId Id="8" Count="1" />
      <LineId Id="5" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="13" Count="0" />
    </LineIds>
    <LineIds Name="FuncGeneralesCortHum4.ListFormatoTabla">
      <LineId Id="5" Count="0" />
      <LineId Id="10" Count="1" />
      <LineId Id="13" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="16" Count="1" />
      <LineId Id="34" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="19" Count="1" />
      <LineId Id="18" Count="0" />
      <LineId Id="22" Count="1" />
      <LineId Id="21" Count="0" />
      <LineId Id="25" Count="1" />
      <LineId Id="24" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>